chore: fix deprecations in Java 20